[project]
name = "mcp-project-1"
version = "0.1.0"
description = "First experiment to try out mcp"
authors = [
    {name = "bibinkunjumon2020",email = "bibinkunjumon2020@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters (>=0.1.7,<0.2.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
